3 USE + multiplayer INFO/MOVE: adjacent/same-cell door toggling, per-player positions with avatar overlay and mutual blocking, register /take /place /use; remove shared GameState, adding tests file for new implements and extend V3 TileMap tests.