@@ -1,105 +1,102 @@
 package comp3050.server;
 
-import comp3050.GameState;
-import comp3050.TileMap;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
+import java.io.IOException;
+import java.net.HttpURLConnection;
+import java.net.InetSocketAddress;
+import java.net.URL;
+
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import com.sun.net.httpserver.HttpServer;
-import org.junit.jupiter.api.*;
 
-import java.net.InetSocketAddress;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import comp3050.TileMap;
 
-import static org.junit.jupiter.api.Assertions.*;
+public class InfoHandlerTest {
 
-class InfoHandlerTest {
+    private HttpServer server;
+    private int port;
 
-    private static HttpServer server;
-    private static String baseUrl;
-    private static HttpClient client;
-    private static String session;
-
-    @BeforeAll
-    static void setup() throws Exception {
-
-        // Create test map and game state
+    @BeforeEach
+    void setUp() throws Exception {
         TileMap tileMap = new TileMap();
-        GameState gameState = new GameState(5, 5);
 
-        // Start temporary test server
         server = HttpServer.create(new InetSocketAddress(0), 0);
-        server.createContext("/info", new InfoHandler(tileMap, gameState));
+        server.createContext("/info", new InfoHandler(tileMap));
         server.start();
 
-        int port = server.getAddress().getPort();
-        baseUrl = "http://127.0.0.1:" + port;
-
-        client = HttpClient.newHttpClient();
-
-        // Create valid V2 session token
-        session = SessionManager.getInstance().createSession("JUnitInfoUser");
+        port = server.getAddress().getPort();
     }
 
-    @AfterAll
-    static void tearDown() {
-        // Stop test server after all tests finish
+    @AfterEach
+    void tearDown() {
         server.stop(0);
     }
 
     @Test
-    void infoWithoutSessionReturns401() throws Exception {
+    void testInfoHandlerCanBeCreated() throws Exception {
+        // checks InfoHandler object can be created
 
-        // V2 requires authentication
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(baseUrl + "/info?y=5&x=5"))
-                .GET()
-                .build();
+        TileMap tileMap = new TileMap();
+        InfoHandler handler = new InfoHandler(tileMap);
 
-        HttpResponse<String> response =
-                client.send(request, HttpResponse.BodyHandlers.ofString());
-
-        assertEquals(401, response.statusCode());
+        assertNotNull(handler);
     }
 
     @Test
-    void infoWrongLocationReturns204() throws Exception {
+    void testInfoWithoutTokenReturns401() throws IOException {
+        // checks user cannot access info without login token
 
-        // Client position does not match server position
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(baseUrl + "/info?y=999&x=999&session=" + session))
-                .GET()
-                .build();
+        URL url = new URL("http://localhost:" + port + "/info?y=0&x=0");
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
 
-        HttpResponse<String> response =
-                client.send(request, HttpResponse.BodyHandlers.ofString());
-
-        assertEquals(204, response.statusCode());
+        assertEquals(401, conn.getResponseCode());
     }
 
     @Test
-    void infoCorrectLocationReturns200() throws Exception {
+    void testInfoMissingPositionReturns204() throws IOException {
+        // checks info returns 204 if y and x are missing
 
-        // Correct player position should return map information
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(baseUrl + "/info?y=5&x=5&session=" + session))
-                .GET()
-                .build();
+        String token = SessionManager.getInstance().createSession("admin");
 
-        HttpResponse<String> response =
-                client.send(request, HttpResponse.BodyHandlers.ofString());
+        URL url = new URL("http://localhost:" + port + "/info");
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestProperty("Authorization", "Bearer " + token);
 
-        assertEquals(200, response.statusCode());
+        assertEquals(204, conn.getResponseCode());
+    }
 
-        // Check important JSON fields exist
-        assertTrue(response.body().contains("\"user\""));
-        assertTrue(response.body().contains("\"y\""));
-        assertTrue(response.body().contains("\"x\""));
-        assertTrue(response.body().contains("\"top\""));
-        assertTrue(response.body().contains("\"left\""));
-        assertTrue(response.body().contains("\"bottom\""));
-        assertTrue(response.body().contains("\"right\""));
-        assertTrue(response.body().contains("\"info\""));
+    @Test
+    void testInfoWrongPositionReturns204() throws IOException {
+        // checks info returns 204 if player position is wrong
+
+        String token = SessionManager.getInstance().createSession("admin");
+
+        URL url = new URL("http://localhost:" + port + "/info?y=99&x=99");
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestProperty("Authorization", "Bearer " + token);
+
+        assertEquals(204, conn.getResponseCode());
+    }
+
+    @Test
+    void testInfoCorrectPositionReturns200() throws IOException {
+        // checks info works when y and x match the player's real position
+
+        String token = SessionManager.getInstance().createSession("admin");
+
+        PlayerState player = WorldRegistry.getInstance().getOrCreate("admin");
+        int y = player.getY();
+        int x = player.getX();
+
+        URL url = new URL("http://localhost:" + port + "/info?y=" + y + "&x=" + x);
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestProperty("Authorization", "Bearer " + token);
+
+        assertEquals(200, conn.getResponseCode());
     }
 }
